Readme updated Lombok added lombok mapstruct conflict resolved tests for checkAnswer method and for findTasksFromVerificationWork method in student service logic for update method for all services fixed