@@ -2,24 +2,27 @@ package ru.sova.educationapp.EducationalSystemApp.services;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
+import ru.sova.educationapp.EducationalSystemApp.DTO.TaskDTO;
 import ru.sova.educationapp.EducationalSystemApp.models.Student;
+import ru.sova.educationapp.EducationalSystemApp.models.Task;
 import ru.sova.educationapp.EducationalSystemApp.models.Tutor;
 import ru.sova.educationapp.EducationalSystemApp.models.VerificationWork;
-import ru.sova.educationapp.EducationalSystemApp.models.VerificationWorkTest;
 import ru.sova.educationapp.EducationalSystemApp.repositories.StudentRepository;
-import ru.sova.educationapp.EducationalSystemApp.repositories.VerificationWorkRepository;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.sql.ResultSet;
+import java.time.LocalDateTime;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 public class StudentServiceTest {
 
     private static final int ID = 1;
@@ -32,12 +35,10 @@ public class StudentServiceTest {
 
     private final VerificationWorkService verificationWorkService = mock(VerificationWorkService.class);
 
-    @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.openMocks(this); // Инициализация моков
-    }
+    private final TaskService taskService = mock(TaskService.class);
+
     @Test
-    public void testAddVerificationWork_shouldCallRepositoryAndVerificationWorkService(){
+    public void testAddVerificationWork_shouldCallRepositoryAndVerificationWorkService() {
         final Student student = mock(Student.class);
         final VerificationWork verificationWork = mock(VerificationWork.class);
         when(studentRepository.findById(ID)).thenReturn(Optional.of(student));
@@ -56,6 +57,7 @@ public class StudentServiceTest {
         verify(verificationWorkService, times(1)).save(verificationWork);
         verify(studentRepository, times(1)).save(student);
     }
+
     @Test
     public void testFindStudentById_shouldCallRepository() {
         final Student expected = mock(Student.class);
@@ -67,21 +69,27 @@ public class StudentServiceTest {
         assertEquals(expected, actual);
         verify(studentRepository, times(1)).findById(ID);
     }
+
     @Test
     public void testFindAll_shouldCallRepository() {
-        final Student student = mock(Student.class);
-        final List<Student> expected = Collections.singletonList(student);
-        when(studentRepository.findAll()).thenReturn(expected);
+        final List<Student> students = List.of(
+                new Student(1,"testName1", "testPassword1", "test1@email.ru",
+                        16, List.of(mock(Tutor.class)), List.of(mock(VerificationWork.class))),
+                new Student(2,"testName2", "testPassword2", "test2@email.ru",
+                        16, List.of(mock(Tutor.class)), List.of(mock(VerificationWork.class))));
 
-        List<Student> actual = studentService.finAll();
+        doReturn(students).when(studentRepository).findAll();
 
-        assertNotNull(actual);
-        assertEquals(actual.size(), expected.size());
-        assertEquals(actual, expected);
+        var gottenStudents = studentService.findAll();
+
+        assertNotNull(gottenStudents);
+        assertEquals(students.size(), gottenStudents.size());
+        assertEquals(gottenStudents, students);
         verify(studentRepository, times(1)).findAll();
     }
+
     @Test
-    public void testSave_shouldCallRepository(){
+    public void testSave_shouldCallRepository() {
         final Student student = mock(Student.class);
         when(studentRepository.save(student)).thenReturn(student);
 
@@ -90,15 +98,17 @@ public class StudentServiceTest {
         assertNotNull(actual);
         verify(studentRepository, times(1)).save(student);
     }
+
     @Test
-    public void testDeleteById_shouldCallRepository(){
+    public void testDeleteById_shouldCallRepository() {
 
         studentRepository.deleteById(ID);
 
         verify(studentRepository, times(1)).deleteById(ID);
     }
+
     @Test
-    public void testUpdate_shouldCallRepository(){
+    public void testUpdate_shouldCallRepository() {
         final Student student = mock(Student.class);
         when(studentRepository.save(student)).thenReturn(student);
         when(studentRepository.findById(ID)).thenReturn(Optional.of(student));
@@ -110,8 +120,9 @@ public class StudentServiceTest {
         verify(studentRepository, times(1)).findById(ID);
         verify(studentRepository, times(1)).save(student);
     }
+
     @Test
-    public void testFindByVerificationWorkNotContains_shouldCallRepository(){
+    public void testFindByVerificationWorkNotContains_shouldCallRepository() {
         final VerificationWork verificationWork = mock(VerificationWork.class);
         final List<Student> students = new ArrayList<>();
         when(studentRepository.findAllByVerificationWorksNotContains(verificationWork)).thenReturn(students);
@@ -122,8 +133,9 @@ public class StudentServiceTest {
         verify(studentRepository, times(1))
                 .findAllByVerificationWorksNotContains(verificationWork);
     }
+
     @Test
-    public void testFindByVerificationWork_shouldCallRepository(){
+    public void testFindByVerificationWork_shouldCallRepository() {
         final VerificationWork verificationWork = mock(VerificationWork.class);
         final List<Student> students = new ArrayList<>();
         when(studentRepository.findAllByVerificationWorksContains(verificationWork)).thenReturn(students);
@@ -134,8 +146,9 @@ public class StudentServiceTest {
         verify(studentRepository, times(1))
                 .findAllByVerificationWorksContains(verificationWork);
     }
+
     @Test
-    public void testFindByTutorsNotContains_shouldCallRepository(){
+    public void testFindByTutorsNotContains_shouldCallRepository() {
         final Tutor tutor = mock(Tutor.class);
         final List<Student> students = new ArrayList<>();
         when(studentRepository.findByTutorsNotContains(tutor)).thenReturn(students);
@@ -146,8 +159,9 @@ public class StudentServiceTest {
         verify(studentRepository, times(1))
                 .findByTutorsNotContains(tutor);
     }
+
     @Test
-    public void testExcludeWork_shouldCallRepository(){
+    public void testExcludeWork_shouldCallRepository() {
         final VerificationWork verificationWork = mock(VerificationWork.class);
         final Student student = mock(Student.class);
         when(studentRepository.save(student)).thenReturn(student);
@@ -163,4 +177,66 @@ public class StudentServiceTest {
         verify(verificationWorkService, times(1))
                 .save(verificationWork);
     }
+
+    @Test
+    public void testCheckAnswersWithRightAnswers() {
+        List<Task> tasks = List.of(
+                new Task(1, "task 1 def",
+                        "task 1 answer", List.of(mock(VerificationWork.class))),
+                new Task(2, "task 2 def",
+                        "task 2 answer", List.of(mock(VerificationWork.class))));
+        List<TaskDTO> answers = List.of(
+                new TaskDTO(1, "task 1 def", "task 1 answer"),
+                new TaskDTO(2, "task 2 def", "task 2 answer"));
+        Map<Integer, Boolean> answersStatus = new HashMap<>();
+        for (TaskDTO task : answers) {
+            if (task.getAnswer().equals(tasks.stream().filter(s -> s.getId() == task.getId()).findAny().get().getAnswer())) {
+                answersStatus.put(task.getId(), true);
+            } else {
+                answersStatus.put(task.getId(), false);
+            }
+        }
+        answersStatus.entrySet().forEach(answer -> assertTrue(answer.getValue()));
+    }
+
+    @Test
+    public void testCheckAnswersWithInvalidAnswers() {
+        List<Task> tasks = List.of(
+                new Task(1, "task 1 def",
+                        "task 1 answer", List.of(mock(VerificationWork.class))),
+                new Task(2, "task 2 def",
+                        "task 2 answer", List.of(mock(VerificationWork.class))));
+        List<TaskDTO> answers = List.of(
+                new TaskDTO(1, "task 1 def", "wrong task 1 answer"),
+                new TaskDTO(2, "task 2 def", "wrong task 2 answer"));
+        Map<Integer, Boolean> answersStatus = new HashMap<>();
+        for (TaskDTO task : answers) {
+            if (task.getAnswer().equals(tasks.stream().filter(s -> s.getId() == task.getId()).findAny().get().getAnswer())) {
+                answersStatus.put(task.getId(), true);
+            } else {
+                answersStatus.put(task.getId(), false);
+            }
+        }
+        answersStatus.entrySet().forEach(answer -> assertFalse(answer.getValue()));
+    }
+
+    @Test
+    public void findTasksFromVerificationWork_shouldCallRepository() {
+        final Task task = mock(Task.class);
+        final VerificationWork verificationWork = new VerificationWork(
+                ID, "test title 1", LocalDateTime.now(),
+                LocalDateTime.now(), List.of(task), List.of(mock(Student.class)));
+        final Student student = new Student(1,"test name 1", "test password 1",
+                "test@email.ru", 16, List.of(mock(Tutor.class)), List.of(verificationWork));
+        doReturn(Optional.of(student)).when(studentRepository).findById(ID);
+        List<Task> foundTasks = studentRepository.findById(ID).get().getVerificationWorks()
+                .stream().filter(s -> s.getId() == ID).findAny().get().getTasks()
+                .stream().toList();
+        assertNotNull(foundTasks);
+        assertEquals(foundTasks.size(), verificationWork.getTasks().size());
+        assertEquals(foundTasks, verificationWork.getTasks());
+        verify(studentRepository, times(1)).findById(ID);
+
+    }
 }
+
